Simple CRUD example with Helidon Nima.
Signed-off-by: Tomáš Kraus <tomas.kraus@oracle.com>